--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">R34 University</string>
+    <string-array name="parsers_array">
+        <item>rule34.xxx</item>
+        <item>rule34.paheal.net</item>
+    </string-array>
+
 </resources>
