--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,11 @@
 <resources>
     <string name="app_name">R34 Universe</string>
-    <string name="app_version">1.0.1</string>
+    <string name="app_version">1.1</string>
     <string name="project_link">github.com/ACLzz/Rule34-Universal-Android-Client</string>
     <string name="author">Amber Claes</string>
     <string name="default_tags_description">
         This tags will be added to all your requests. For example if default tags is: "-futanari -pregnant",
-        then when I will search for "female", it won\'t show me futanari and pregnant.\n
-        Don\'t forget to press enter after editing field to save tags.
+        then when I will search for "female", it won\'t show me futanari and pregnant.\nDon\'t forget to press enter after editing field to save tags.
     </string>
     <string-array name="parsers_array">
         <item>rule34.xxx</item>
